# strawberry-ai-hub

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  ruff.toml  test_hub_prompt.py
config/: tensorzero.toml
config/tools/: describe_function.json  python_exec.json  search_skills.json
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/chat/: ChatArea.tsx  ChatInput.tsx  ChatSidebar.tsx  MessageBubble.tsx  MessageList.tsx  (+1 more)
frontend/src/contexts/: ChatSessionContext.tsx
frontend/src/lib/: api.ts  chatStream.ts  sse.ts  useTheme.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Devices.tsx  Login.tsx  Overview.tsx  Settings.tsx  Setup.tsx  Users.tsx
logs/: hub.log.1
scripts/: build_frontend.sh  dev.py
src/hub/: __init__.py  asteval_executor.py  auth.py  config.py  database.py  logging_config.py  main.py  prompt.py  protocol.py  skill_service.py  tensorzero_gateway.py  tool_schema.py  utils.py
src/hub/routers/: __init__.py  admin.py  auth.py  chat.py  device_discovery.py  devices.py  sessions.py  skills.py  websocket.py
tests/: __init__.py  conftest.py  test_auth.py  test_chat_tools.py  test_device_registration.py  test_device_status.py  test_devices.py  test_hub_connection_conflict.py  test_hub_prompt.py  test_prompt_hooks.py  test_protocol.py  test_sessions.py  test_skill_routing.py  test_skills.py  test_tool_schema.py  test_tz_parsing.py  test_wire_contract.py
tests/fixtures/: normalize_device_name.json  wire_schema_v1.json
(+8 files in other folders)
